2006-04-16 Yen-Ju Chen <yjchenx at gmail>

	* Use c type in prop.
	* Remove glib from action and config.
	* Add missing COPYING.

2006-04-15 Yen-Ju Chen <yjchenx at gmail>

	* Initial port of parse.
	* Port ObParseInst into AZParser.
	* Use NSString in parse_string.
	* Use Invocation for callback.
	* Finish up invocation.
	* Remove glib from client_list_menu.

2006-04-14 Yen-Ju Chen <yjchenx at gmail>

	* Revert back to an older version
	  because newer one break the move/resize initialied by menu 
	  then mouse movement.
	* Remove ref in AZAction.
	* Port mouse.
	* Remove most of glib in AZKeyboardHandler.
	* Remove glib in AZMouseHandler.
	* Remove glib in translate.

2006-04-13 Yen-Ju Chen <yjchenx at gmail>

	* Use NSMutableArray for focus_order;
	* port ObAction into AZAction.

2006-04-10 Yen-Ju Chen <yjchenx at gmail>

	* Port menu entry (So far so good).
	* Port ObMenu (Still good).
	* Port client_menu and client_list_menu.
	* Hide focus_order in preparation to port.

2006-04-08 Yen-Ju Chen <yjchenx at gmail>

	* move parse one-level up.
	* port keyboard.
	* use notification when client is destroyed.

2006-04-07 Yen-Ju Chen <yjchenx at gmail>

        * Working on AZStacking.
	* Hope to tam the beast.
	* Use NSString in AZClient.
	* Remove glib from AZEventHandler.
	* Remove glib from AZMenuFrame.m (Need more test).
	* Port keytree to AZKeyTree.

2006-04-06 Yen-Ju Chen <yjchenx at gmail>

	* Use AZWindow protocol instead crash-prone ObWindow.
	(This could be unstable).
	* Remove menuframe and clean up ObWindow.
	* Remove some of the glib (gint, glong and gboolean mainly).
	* Remove ObClient.
	* de-glib window.

2006-04-05 Yen-Ju Chen <yjchenx at gmail>

	* Try to implement arbitrary window level.
	* Improve GNUstep window style.
	{Hope it is a stable version).
	* Finish arbitrary window level (sort of).
	* Finish porting menuframe.
	* Use AZClient for transient_for (This was unstable before).

2006-04-04 Yen-Ju Chen <yjchenx at gmail>
