@@ -1,3 +1,7 @@
+2006-04-17 Yen-Ju Chen <yjchenx at gmail>
+
+  	* Remove glib from openbox.m.
+
 2006-04-16 Yen-Ju Chen <yjchenx at gmail>
 
 	* Use c type in prop.
